--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
-    "fs": "0.0.1-security",
+    "fs": "^0.0.1-security",
     "path": "^0.12.7"
   },
   "devDependencies": {},
