--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "express-handlebars": "^3.0.0",
     "fs": "^0.0.1-security",
     "handlebars-intl": "^1.1.2",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "http-auth": "^3.1.1"
   },
   "devDependencies": {},
   "scripts": {
