--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "server.js",
   "private": true,
   "dependencies": {
+    "body-parser": "^1.16.0",
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
     "fs": "^0.0.1-security",
     "handlebars-intl": "^1.1.2",
-    "path": "^0.12.7",
-    "http-auth": "^3.1.1"
+    "http-auth": "^3.1.1",
+    "path": "^0.12.7"
   },
   "devDependencies": {},
   "scripts": {
