--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "fs": "^0.0.1-security",
     "handlebars-intl": "^1.1.2",
     "http-auth": "^3.1.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "throng": "^4.0.0"
   },
   "devDependencies": {},
   "scripts": {
