--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "path": "^0.12.7",
     "throng": "^5.0.0"
   },
+  "devDependencies": {
+    "lodash": ">=4.17.21"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
